fix(#3324): fix devlops side menu (#3332)
* feat(common): internationalization-optimization
*feat: side menu
*feat: tab menu

* feat(common): internationalization-optimization
*feat: add bottom

* fix(#3324): fix side menu

--- a/shell/app/locales/zh.json
+++ b/shell/app/locales/zh.json
@@ -906,7 +906,6 @@
     "Code branch": "代码分支",
     "Code production index": "代码生产指数",
     "Code source": "代码源",
-    "Collaboration": "项目协同",
     "Collapse": "收起",
     "Comment ({meta} + Enter to send, Esc to collapse)": "评论 ({meta} + Enter 发送, Esc 收起)",
     "Compare": "比较",
@@ -1153,7 +1152,6 @@
     "Post": "发表",
     "Preconditions": "前置条件",
     "Principal": "负责人",
-    "Principal-test": "测试负责人",
     "Priority": "优先级",
     "Private-application": "私有应用",
     "Private-project": "私有项目",
@@ -1161,12 +1159,9 @@
     "Project Artifacts": "项目制品",
     "Project Information": "项目信息",
     "Project Member": "项目成员",
-    "Project collaborative participation index": "项目协同参与指数",
-    "Project issues include milestones, requirements, bugs and tasks, and you can set the workflow as needed.": "事项类型覆盖里程碑、需求、缺陷和任务，可以对每个事项类型进行不同配置。如需改变工作流类型，您可以选择具体的事项类型进行修改。",
-    "Project quality contribution index": "项目质量保证贡献指数",
-    "Project-level app": "项目级应用",
     "Projects": "项目",
-    "Projects-manage": "项目管理",
+    "Project-manage": "项目管理",
+    "Projects Management": "项目管理",
     "Public": "公开应用",
     "Quality Access Control": "代码质量门禁",
     "Ranking": "排名",
@@ -1219,16 +1214,7 @@
     "System built-in Git repository": "系统内置Git仓库",
     "Tell about your project in one sentence, so that more people can quickly understand your project, go to": "用一句话讲述你的项目，让更多的人快速了解你的项目，前往",
     "Terminated": "终止",
-    "Test Case": "测试用例",
-    "Test Report": "测试报告",
-    "Test Reports": "测试报告",
-    "Test Statistics": "测试统计",
-    "Test output": "测试输出",
-    "Test pass rate": "测试通过率",
-    "Test report details": "测试报告详情",
-    "Test set": "测试集",
-    "Test statistics": "测试统计",
-    "Test summary": "测试总结",
+    "Testing Reports": "测试报告",
     "Testcase": "用例",
     "The app branch rule is mainly to protect the app code branch and set switches for continuous integration. Please configure it as needed.": "应用分支规则主要是对应用代码分支的保护和持续集成的开关设置，请根据应用实际需要合理配置。",
     "The application cannot be restored after deletion.Please enter {name} to confirm.": "应用删除后无法恢复，请输入 {name} 进行确认",
@@ -1765,6 +1751,8 @@
     "post comment": "发表评论",
     "previous": "上一步",
     "professional edition": "专业版",
+    "Collaboration": "项目协同",
+    "Project collaborative participation index": "项目协同参与指数",
     "project created successfully": "创建项目成功",
     "project deleted successfully": "删除项目成功",
     "project quota": "项目配额",
@@ -1893,6 +1881,17 @@
     "task params": "任务参数",
     "template select": "模板选择",
     "test plan status": "测试计划状态",
+    "Test Case": "测试用例",
+    "Principal-test": "测试负责人",
+    "Test output": "测试输出",
+    "Test pass rate": "测试通过率",
+    "Test Reports": "测试报告",
+    "Test Report": "测试报告",
+    "Test report details": "测试报告详情",
+    "Test set": "测试集",
+    "Test statistics": "测试统计",
+    "Test Statistics": "测试统计",
+    "Test summary": "测试总结",
     "testing": "测试中",
     "the alarm strategy will be permanently deleted": "该告警策略将被永久删除",
     "the current action does not exist, please re-select!": "当前 Action 不存在，请重新选择！",
