fix: devops side menu Collaboration translation

--- a/shell/app/locales/en.json
+++ b/shell/app/locales/en.json
@@ -907,6 +907,7 @@
     "Code production index": "Code production index",
     "Code source": "Code source",
     "Collaboration": "Collaboration",
+    "Collaboration-project-manage": "Collaboration",
     "Collapse": "Collapse",
     "Comment ({meta} + Enter to send, Esc to collapse)": "Comment ({meta} + Enter to send, Esc to collapse)",
     "Compare": "Compare",
