--- a/shell/app/locales/zh.json
+++ b/shell/app/locales/zh.json
@@ -1752,6 +1752,7 @@
     "previous": "上一步",
     "professional edition": "专业版",
     "Collaboration": "项目协同",
+    "Collaboration-project-manage": "项目管理",
     "Project collaborative participation index": "项目协同参与指数",
     "project created successfully": "创建项目成功",
     "project deleted successfully": "删除项目成功",
