fix: fix cmp table filter

--- a/locales/en.json
+++ b/locales/en.json
@@ -813,6 +813,7 @@
     "prod environment": "prod environment",
     "Production": "Production",
     "Production-env": "Production",
+    "production": "production",
     "professional": "professional",
     "project": "project",
     "project-app-name-tip": "you can only use lowercase letters or numbers to begin and end. The hyphen can use -",
