feat(common): internationalization-optimization *feat(msp): side menu & tab *feat(cmp): side menu & tab *feat(admin): side menu & tab

--- a/locales/en.json
+++ b/locales/en.json
@@ -463,7 +463,7 @@
     "advanced settings": "advanced settings",
     "agree": "agree",
     "alarm data report": "alarm data report",
-    "alarm strategy": "alarm strategy",
+    "alert strategy": "alert strategy",
     "alibaba cloud": "alibaba cloud",
     "all keys are required": "all keys are required",
     "allocated": "allocated",
@@ -798,7 +798,7 @@
     "please input the SMS signature you have applied for on the service provider platform": "please input the SMS signature you have applied for on the service provider platform",
     "please input the Voice Template ID you have applied for on the service provider platform": "please input the Voice Template ID you have applied for on the service provider platform",
     "please off the channel and then delete!": "please off the channel and then delete!",
-    "please select": "please select",
+    "Please Select": "Please Select",
     "please select labels": "please select labels",
     "please select version": "please select version",
     "please select {name}": "please select {name}",
