--- a/shell/app/locales/zh.json
+++ b/shell/app/locales/zh.json
@@ -48,7 +48,6 @@
     "Add existing resources to build a cluster": "添加已有资源自建集群",
     "Add machine to cluster": "添加机器到集群",
     "Add-announcement": "新建公告",
-    "Add-custom-dashboard": "新建自定义大盘",
     "Add-field-rules": "添加字段规则",
     "Add-filter-rules": "添加过滤规则",
     "Add-report-task": "新建报告任务",
@@ -159,7 +158,7 @@
     "Instance": "实例列表",
     "Instance is not ready": "实例尚未准备就绪",
     "Jump server configuration": "跳板机配置",
-    "Kubectl console": "Kubectl 命令行",
+    "Kubectl Console": "Kubectl 命令行",
     "Level": "告警级别",
     "Machine Alert": "机器告警",
     "Machine Details": "机器详情",
@@ -402,7 +401,7 @@
     "create at least one notification object": "至少创建一个通知对象",
     "create at least one rule": "至少创建一条规则",
     "create cluster": "创建集群",
-    "create custom rule": "创建自定义规则",
+    "Add Custom Rule": "创建自定义规则",
     "create database": "创建数据库",
     "create ticket": "创建工单",
     "custom CIDR Block": "高级配置网段",
@@ -567,7 +566,7 @@
     "project label": "项目标签",
     "public read": "公共读",
     "public read and write": "公共读写",
-    "publisher info": "发布商信息",
+    "publisher": "发布商信息",
     "purchase time": "购买时长",
     "purchased instances": "机器数量",
     "quick start": "快速入门",
@@ -2379,10 +2378,10 @@
     "history available time": "历史可用时间",
     "hot statistics": "热点统计",
     "html completes building": "HTML完成构建",
-    "http method": "http调用方法",
+    "http method": "HTTP调用方法",
     "http protocol": "HTTP 协议",
-    "http status": "Http状态",
-    "http status code": "http 状态码",
+    "http status": "HTTP状态",
+    "http status code": "HTTP 状态码",
     "identification": "鉴别",
     "idle connections": "idle连接数",
     "information": "信息",
@@ -2406,6 +2405,7 @@
     "maximum number of queries": "最大查询条数",
     "maximum time consuming": "最大耗时",
     "microService API management": "微服务API管理",
+    "API": "微服务API管理",
     "millisecond(s)": "毫秒",
     "minimum time consuming": "最小耗时",
     "monitoring platform": "监控平台",
