--- a/locales/zh.json
+++ b/locales/zh.json
@@ -463,7 +463,7 @@
     "advanced settings": "高级设置",
     "agree": "同意",
     "alarm data report": "告警数据报表",
-    "alarm strategy": "告警策略",
+    "alert strategy": "告警策略",
     "alibaba cloud": "阿里云",
     "all keys are required": "所有标示必填",
     "allocated": "分配量：",
@@ -799,7 +799,7 @@
     "please input the SMS signature you have applied for on the service provider platform": "请输入在服务商平台申请的短信签名",
     "please input the Voice Template ID you have applied for on the service provider platform": "请输入在服务商平台申请的语音模板 ID",
     "please off the channel and then delete!": "请先停用后再删除!",
-    "please select": "请选择",
+    "Please Select": "请选择",
     "please select labels": "请选择标签",
     "please select version": "请选择版本",
     "please select {name}": "请选择{name}",
