--- a/shell/app/locales/zh.json
+++ b/shell/app/locales/zh.json
@@ -40,7 +40,7 @@
     "3 or 1 is recommended, and separate them by comma": "建议3个或1个，多个用逗号分隔",
     "6 to 32 digits, must contain letters in uppercase and lowercase and numbers": "8到32位，需同时包含大写字母、小写字母和数字",
     "Add Alibaba Cloud machine": "添加阿里云主机",
-    "Add Cluster": "添加集群",
+    "Add Custom Rule": "创建自定义规则",
     "Add Dashboard": "新建大盘",
     "Add External User": "添加外部用户",
     "Add More Notification Groups": "添加更多通知组",
@@ -401,7 +401,6 @@
     "create at least one notification object": "至少创建一个通知对象",
     "create at least one rule": "至少创建一条规则",
     "create cluster": "创建集群",
-    "Add Custom Rule": "创建自定义规则",
     "create database": "创建数据库",
     "create ticket": "创建工单",
     "custom CIDR Block": "高级配置网段",
@@ -665,7 +664,6 @@
     "Cannot contain spaces, length is {min}~{max}": "不能包含空格，长度为{min}~{max}",
     "Clear": "清除",
     "Clear selected": "清除已选",
-    "Copy Configuration": "复制配置",
     "Custom": "自定义",
     "DEFAULT": "默认",
     "Default configuration": "默认配置",
@@ -711,7 +709,6 @@
     "Yes": "是",
     "You can set application-level roles at the same time": "您可以同时设置应用级别的角色",
     "a few seconds": "几秒",
-    "add configuration": "添加配置",
     "add form items on the left": "在左侧添加表单项",
     "add form sub item {name}": "添加表单组{name}子选项",
     "add parameter": "添加参数",
@@ -905,6 +902,8 @@
     "Code branch": "代码分支",
     "Code production index": "代码生产指数",
     "Code source": "代码源",
+    "Collaboration": "项目协同",
+    "Collaboration-project-manage": "项目管理",
     "Collapse": "收起",
     "Comment ({meta} + Enter to send, Esc to collapse)": "评论 ({meta} + Enter 发送, Esc 收起)",
     "Compare": "比较",
@@ -1151,6 +1150,7 @@
     "Post": "发表",
     "Preconditions": "前置条件",
     "Principal": "负责人",
+    "Principal-test": "测试负责人",
     "Priority": "优先级",
     "Private-application": "私有应用",
     "Private-project": "私有项目",
@@ -1158,9 +1158,11 @@
     "Project Artifacts": "项目制品",
     "Project Information": "项目信息",
     "Project Member": "项目成员",
+    "Project collaborative participation index": "项目协同参与指数",
+    "Project issues include milestones, requirements, bugs and tasks, and you can set the workflow as needed.": "您可以选择具体的事项类型进行修改。",
+    "Project quality contribution index": "项目质量保证贡献指数",
+    "Project-level app": "项目级应用",
     "Projects": "项目",
-    "Project-manage": "项目管理",
-    "Projects Management": "项目管理",
     "Public": "公开应用",
     "Quality Access Control": "代码质量门禁",
     "Ranking": "排名",
@@ -1213,8 +1215,18 @@
     "System built-in Git repository": "系统内置Git仓库",
     "Tell about your project in one sentence, so that more people can quickly understand your project, go to": "用一句话讲述你的项目，让更多的人快速了解你的项目，前往",
     "Terminated": "终止",
-    "Testing Reports": "测试报告",
+    "Test Case": "测试用例",
+    "Test Report": "测试报告",
+    "Test Reports": "测试报告",
+    "Test Statistics": "测试统计",
+    "Test output": "测试输出",
+    "Test pass rate": "测试通过率",
+    "Test report details": "测试报告详情",
+    "Test set": "测试集",
+    "Test statistics": "测试统计",
+    "Test summary": "测试总结",
     "Testcase": "用例",
+    "Testing Reports": "测试报告",
     "The app branch rule is mainly to protect the app code branch and set switches for continuous integration. Please configure it as needed.": "应用分支规则主要是对应用代码分支的保护和持续集成的开关设置，请根据应用实际需要合理配置。",
     "The application cannot be restored after deletion.Please enter {name} to confirm.": "应用删除后无法恢复，请输入 {name} 进行确认",
     "The artifact is a release product of pipeline, and the environment selected below can be directly deployed by the artifact of this branch.": "制品为 Pipeline 中的 release 产物，下面所选环境能够通过该分支的制品直接部署",
@@ -1533,7 +1545,6 @@
     "file must be smaller than 20 MB": "文件必须小于 20MB！",
     "file type error": "文件类型错误",
     "files": "代码仓库",
-    "filter by alarm type": "按告警类型过滤",
     "filter by application name": "通过所在应用名过滤",
     "filter name": "筛选器名称",
     "folder is created successfully": "创建文件夹成功",
@@ -1750,9 +1761,6 @@
     "post comment": "发表评论",
     "previous": "上一步",
     "professional edition": "专业版",
-    "Collaboration": "项目协同",
-    "Collaboration-project-manage": "项目管理",
-    "Project collaborative participation index": "项目协同参与指数",
     "project created successfully": "创建项目成功",
     "project deleted successfully": "删除项目成功",
     "project quota": "项目配额",
@@ -1881,17 +1889,6 @@
     "task params": "任务参数",
     "template select": "模板选择",
     "test plan status": "测试计划状态",
-    "Test Case": "测试用例",
-    "Principal-test": "测试负责人",
-    "Test output": "测试输出",
-    "Test pass rate": "测试通过率",
-    "Test Reports": "测试报告",
-    "Test Report": "测试报告",
-    "Test report details": "测试报告详情",
-    "Test set": "测试集",
-    "Test statistics": "测试统计",
-    "Test Statistics": "测试统计",
-    "Test summary": "测试总结",
     "testing": "测试中",
     "the alarm strategy will be permanently deleted": "该告警策略将被永久删除",
     "the current action does not exist, please re-select!": "当前 Action 不存在，请重新选择！",
@@ -2011,6 +2008,7 @@
   },
   "msp": {
     "32 digits letters and numbers": "32位英文数字",
+    "API": "微服务API管理",
     "API analysis": "API分析",
     "API path": "API路径",
     "API policies": "API策略",
@@ -2405,7 +2403,6 @@
     "maximum number of queries": "最大查询条数",
     "maximum time consuming": "最大耗时",
     "microService API management": "微服务API管理",
-    "API": "微服务API管理",
     "millisecond(s)": "毫秒",
     "minimum time consuming": "最小耗时",
     "monitoring platform": "监控平台",
