feat: force cluster offline

--- a/shell/app/locales/en.json
+++ b/shell/app/locales/en.json
@@ -296,6 +296,7 @@
     "Trigger rule": "Trigger rule",
     "Type": "Type",
     "Type Template": "Type Template",
+    "Unable to go offline normally": "Unable to go offline normally",
     "Upload File": "Upload File",
     "Usage": "Usage",
     "Used to host code repositories, supports multiple repositories, with the option to enable CI/CD and artifacts.": "Used to host code repositories, supports multiple repositories, with the option to enable CI/CD and artifacts.",
@@ -309,6 +310,7 @@
     "Weekly": "Weekly",
     "Weekly-report": "Weekly",
     "Western United States": "Western United States",
+    "Whether to be forced offline": "Whether to be forced offline",
     "Workload": "Workload",
     "You can share the link to QQ, WeChat, DingTalk and other work groups, and colleagues can join the organization through this link.": "You can share the link to QQ, WeChat, DingTalk and other work groups, and colleagues can join the company through this link",
     "absolute path for local data storage": "absolute path for local data storage",
