--- a/shell/app/locales/zh.json
+++ b/shell/app/locales/zh.json
@@ -296,6 +296,7 @@
     "Trigger rule": "触发规则定义",
     "Type": "报告类型",
     "Type Template": "类型模板",
+    "Unable to go offline normally": "无法正常下线原因",
     "Upload File": "上传文件",
     "Usage": "使用率",
     "Used to host code repositories, supports multiple repositories, with the option to enable CI/CD and artifacts.": "用于托管代码仓库，支持多个仓库，并可选择开启CI/CD和制品。",
@@ -309,6 +310,7 @@
     "Weekly": "每周",
     "Weekly-report": "周报",
     "Western United States": "美国西部",
+    "Whether to be forced offline": "是否需强制下线",
     "Workload": "工作负载",
     "You can share the link to QQ, WeChat, DingTalk and other work groups, and colleagues can join the organization through this link.": "您可以将链接分享至QQ、微信、钉钉等工作群，同事们通过此链接即可加入组织",
     "absolute path for local data storage": "本地数据存储绝对路径",
