feat(msp): i18n optimization in msp collaboration

--- a/locales/en.json
+++ b/locales/en.json
@@ -140,6 +140,7 @@
     "Enable": "Enable",
     "Enable-open": "Enable",
     "End date": "End date",
+    "End time": "End time",
     "Enter to save quickly, {meta} + Enter to save and continue": "Enter to save quickly, {meta} + Enter to save and continue",
     "Entry Mode": "Entry Mode",
     "Entry domain": "Entry domain",
@@ -260,6 +261,7 @@
     "O&M Alert": "O&M Alert",
     "O&M Report": "O&M Report",
     "October": "October",
+    "Ok": "Ok",
     "On this page, you can check the progress of my application to call the API request, and its specific authentication information after the application is approved.": "On this page, you can check the processing progress of my application to call the API request, and the specific authentication information of the API call after the application is passed.",
     "Only one channel of the same type can be enabled. Enabled channels will be used to send notification messages of the corresponding type.": "Only one channel of the same type can be enabled. Enabled channels will be used to send notification messages of the corresponding type.",
     "Operator": "Operator",
@@ -412,6 +414,7 @@
     "Time": "Time",
     "Title": "Title",
     "Today": "Today",
+    "Todo List": "Todo List",
     "Tokyo": "Tokyo",
     "Totally {total} items": "Totally {total} items",
     "Traffic Overview": "Traffic Overview",
@@ -425,6 +428,7 @@
     "United Arab Emirates": "United Arab Emirates",
     "United States": "United States",
     "Unsort": "Unsort",
+    "Unspecified": "Unspecified",
     "Update strategy": "Update strategy",
     "Update time": "Update time",
     "Upload": "Upload",
@@ -940,7 +944,6 @@
     "unit": "unit",
     "unknown": "unknown",
     "unknown state": "unknown state",
-    "unspecified": "unspecified",
     "update": "update",
     "update data every day at 0": "update data every day at 0 o'Clock",
     "updated successfully": "updated successfully",
