--- a/locales/zh.json
+++ b/locales/zh.json
@@ -140,6 +140,7 @@
     "Enable": "启用",
     "Enable-open": "开启",
     "End date": "截止日期",
+    "End time": "截止日期",
     "Enter to save quickly, {meta} + Enter to save and continue": "Enter 快速创建，{meta} + Enter 保存并继续创建",
     "Entry Mode": "录入模式",
     "Entry domain": "入口域名",
@@ -260,6 +261,7 @@
     "O&M Alert": "运维告警",
     "O&M Report": "运维报告",
     "October": "10月",
+    "Ok": "确定",
     "On this page, you can check the progress of my application to call the API request, and its specific authentication information after the application is approved.": "本页面中可以及时查看我申请调用 API 请求的处理进度，以及申请通过后 API 调用的具体认证信息",
     "Only one channel of the same type can be enabled. Enabled channels will be used to send notification messages of the corresponding type.": "同一类型下只能有一个开启的渠道，启用中的渠道将用于发送对应类型的通知消息",
     "Operator": "操作人",
@@ -412,6 +414,7 @@
     "Time": "时间",
     "Title": "标题",
     "Today": "今天",
+    "Todo List": "待办事项",
     "Tokyo": "东京",
     "Totally {total} items": "共 {total} 条",
     "Traffic Overview": "流量概览",
@@ -425,6 +428,7 @@
     "United Arab Emirates": "阿联酋",
     "United States": "美国",
     "Unsort": "取消排序",
+    "Unspecified": "未指定",
     "Update strategy": "更新策略",
     "Update time": "更新时间",
     "Upload": "上传",
@@ -940,7 +944,6 @@
     "unit": "单位",
     "unknown": "未知",
     "unknown state": "未知状态",
-    "unspecified": "未指定",
     "update": "更新",
     "update data every day at 0": "每天 0 点更新数据",
     "updated successfully": "更新成功",
