feat(msp): i18n optimization in msp collaboration (#3364)
* feat(msp): i18n optimization in msp collaboration

* fix: test.tsx

* fix: @erda-ui/react-markdown-editor-lite vertion update

--- a/shell/app/locales/en.json
+++ b/shell/app/locales/en.json
@@ -673,6 +673,7 @@
     "Download Log": "Download Log",
     "Edit Configuration": "Edit Configuration",
     "Email": "Email",
+    "End date": "End date",
     "End time": "End time",
     "Expand the branch directory to select a document or create a new one": "Expand the branch directory to select a document or create a new one",
     "Filter": "Filter",
@@ -697,6 +698,7 @@
     "Selected": "Selected",
     "Send Test Notification": "Send Test Notification",
     "Specification": "Specification",
+    "Start date": "Start date",
     "Switch": "Switch",
     "TEST": "TEST",
     "Test Case": "Test Case",
@@ -741,7 +743,6 @@
     "delete service": "delete service",
     "double confirm": "double confirm",
     "duration(minutes)": "duration(minutes)",
-    "endDate": "endDate",
     "error occurred": "error occurred",
     "execution conditions": "execution conditions",
     "exit current {name}": "exit current {name}",
@@ -799,8 +800,8 @@
     "set the role of member {user}": "set the role of member {user}",
     "sorry": "sorry",
     "start at": "start at",
+    "start time": "start time",
     "start with letters, which can contain letters, numbers, dots, underscores and hyphens.": "start with letters, which can contain letters, numbers, dots, underscores and hyphens.",
-    "startDate": "startDate",
     "state": "state",
     "text": "text",
     "the current data volume exceeds 500kb, please click": "the current data volume exceeds 500kb, please click",
@@ -907,6 +908,7 @@
     "Collaboration": "Collaboration",
     "Collaboration-project-manage": "Collaboration",
     "Collapse": "Collapse",
+    "Comment": "Comment",
     "Comment ({meta} + Enter to send, Esc to collapse)": "Comment ({meta} + Enter to send, Esc to collapse)",
     "Compare": "Compare",
     "Completed": "Completed",
@@ -1031,7 +1033,6 @@
     "Image name": "Image name",
     "Import source": "Import source",
     "Import use case": "Import use case",
-    "Include": "Include",
     "Informal": "Informal",
     "Initiated by Me": "Initiated by Me",
     "Input": "Input",
@@ -1149,6 +1150,7 @@
     "Please select the app": "Please select the app",
     "Please select the branch": "Please select the branch",
     "Please select the iteration": "Please select the iteration",
+    "Please set the label": "Please set the label",
     "Post": "Post",
     "Preconditions": "Preconditions",
     "Principal": "Principal",
@@ -1173,6 +1175,7 @@
     "Registration Center": "Registration Center",
     "Related issue type": "Related issue type",
     "Release document": "Release document",
+    "Release relationship": "Release relationship",
     "Release version": "Release version",
     "Remark": "Remark",
     "Rename": "Rename",
@@ -1192,6 +1195,7 @@
     "Search for the test plan I am involved in/responsible for.": "Search for the test plan I am involved in/responsible for.",
     "Select App Artifact": "Select App Artifact",
     "Select the status": "Select the status",
+    "Serious": "Serious",
     "Set as default": "Set as default",
     "Set notification groups for notifications": "Set notification groups for notifications",
     "Set the default merge request description template": "Set the default merge request description template",
@@ -1221,6 +1225,7 @@
     "Test Report": "Test Report",
     "Test Reports": "Test Reports",
     "Test Statistics": "Test Statistics",
+    "Test case": "Test case",
     "Test output": "Test output",
     "Test pass rate": "Test pass rate",
     "Test report details": "Test report details",
@@ -1275,6 +1280,7 @@
     "Type-issue": "Type",
     "Unfinished iteration": "Unfinished iteration",
     "Unfollow": "Unfollow",
+    "Unspecified": "Unspecified",
     "Up to 255 characters for directory name": "Up to 255 characters for directory name",
     "Up to 255 characters for url path": "Up to 255 characters for url path",
     "Update Priority": "Update Priority",
@@ -1283,6 +1289,7 @@
     "Updated the working hours": "Updated the working hours",
     "Upload File": "Upload File",
     "Upload ZIP file": "Upload ZIP file",
+    "Urgent": "Urgent",
     "Usage": "Usage",
     "Use case list": "Use case list",
     "Use case statistics": "Use case statistics",
@@ -1423,7 +1430,6 @@
     "collapse file": "collapse file",
     "command": "command",
     "commented at": "commented at",
-    "comments": "comments",
     "commit ID": "commit ID",
     "commit branch": "commit branch",
     "commit message": "commit message",
@@ -1802,7 +1808,6 @@
     "reset and switch": "reset and switch",
     "resolved": "resolved",
     "resources": "resources",
-    "responsible person": "responsible person",
     "restart deploy": "restart deploy",
     "restored successfully": "restored successfully",
     "results of the": "results of the",
@@ -1828,7 +1833,6 @@
     "select instance": "select instance",
     "select iteration": "select iteration",
     "self-test situation": "self-test situation",
-    "serious": "serious",
     "service architecture": "service architecture",
     "service deployment": "service deployment",
     "service instance name is repeated": "service instance name is repeated",
@@ -1938,7 +1942,6 @@
     "unarchive": "unarchive",
     "unlimited": "unlimited",
     "unpinned successfully": "unpinned successfully",
-    "unspecified": "unspecified",
     "update completed": "update completed",
     "update-dice-yml-env": "Do you need to update dice-yml, such as adding (modifying) environment variables, etc",
     "updated": "updated",
@@ -1947,7 +1950,6 @@
     "upload files": "upload files",
     "upload-file-tip": "The file is located in the /.pipeline/container/cms/dice_files directory in the container, the file name is the configured Key, and the file content is the uploaded file",
     "uploading, please do not leave": "uploading, please do not leave",
-    "urgent": "urgent",
     "use case title (required)": "use case title (required)",
     "variable-config": "Configure your build to manage build variables for specific environments",
     "version details": "version details",
@@ -1972,8 +1974,8 @@
     "yml-addon-not-exist-tip": "the current instance does not exist, please switch to edit mode to add again",
     "your browser does not support WebSocket!": "your browser does not support WebSocket!",
     "{app}: {branch}, gets new pipelines {time}": "{app}: {branch}, gets new pipelines {time}",
-    "{num} members are following": "{num} members are following",
-    "{num} people followed": "{num} people followed"
+    "{num} followers": "{num} followers",
+    "{num} members are following": "{num} members are following"
   },
   "ecp": {
     "Configuration": "Configuration",
