--- a/shell/app/locales/zh.json
+++ b/shell/app/locales/zh.json
@@ -673,6 +673,7 @@
     "Download Log": "下载日志",
     "Edit Configuration": "修改配置",
     "Email": "邮件",
+    "End date": "结束日期",
     "End time": "结束时间",
     "Expand the branch directory to select a document or create a new one": "展开分支目录选择文档或新建文档",
     "Filter": "筛选",
@@ -697,6 +698,7 @@
     "Selected": "已选择",
     "Send Test Notification": "发送测试通知",
     "Specification": "规格",
+    "Start date": "开始日期",
     "Switch": "切换",
     "TEST": "测试",
     "Test Case": "用例",
@@ -741,7 +743,6 @@
     "delete service": "删除服务",
     "double confirm": "再次确认",
     "duration(minutes)": "时长(分钟)",
-    "endDate": "结束日期",
     "error occurred": "页面出错了",
     "execution conditions": "执行条件",
     "exit current {name}": "退出当前{name}",
@@ -799,8 +800,8 @@
     "set the role of member {user}": "设置成员 {user} 的角色",
     "sorry": "抱歉",
     "start at": "开始时间",
+    "start time": "开始时间",
     "start with letters, which can contain letters, numbers, dots, underscores and hyphens.": "字母开头,可包含字母、数字、.、_、-",
-    "startDate": "开始日期",
     "state": "状态",
     "text": "文本",
     "the current data volume exceeds 500kb, please click": "当前数据量超过500kb，请点击",
@@ -907,6 +908,7 @@
     "Collaboration": "项目协同",
     "Collaboration-project-manage": "项目管理",
     "Collapse": "收起",
+    "Comment": "评论",
     "Comment ({meta} + Enter to send, Esc to collapse)": "评论 ({meta} + Enter 发送, Esc 收起)",
     "Compare": "比较",
     "Completed": "已完成",
@@ -1031,7 +1033,6 @@
     "Image name": "镜像名称",
     "Import source": "引入源",
     "Import use case": "引入用例",
-    "Include": "包含",
     "Informal": "非正式",
     "Initiated by Me": "我发起的",
     "Input": "入参",
@@ -1149,6 +1150,7 @@
     "Please select the app": "请选择应用",
     "Please select the branch": "请选择分支",
     "Please select the iteration": "请选择迭代",
+    "Please set the label": "请设置标签",
     "Post": "发表",
     "Preconditions": "前置条件",
     "Principal": "负责人",
@@ -1161,7 +1163,7 @@
     "Project Information": "项目信息",
     "Project Member": "项目成员",
     "Project collaborative participation index": "项目协同参与指数",
-    "Project issues include milestones, requirements, bugs and tasks, and you can set the workflow as needed.": "您可以选择具体的事项类型进行修改。",
+    "Project issues include milestones, requirements, bugs and tasks, and you can set the workflow as needed.": "事项类型覆盖里程碑、需求、缺陷和任务，可以对每个事项类型进行不同配置。如需改变工作流类型，您可以选择具体的事项类型进行修改。",
     "Project quality contribution index": "项目质量保证贡献指数",
     "Project-level app": "项目级应用",
     "Projects": "项目",
@@ -1173,6 +1175,7 @@
     "Registration Center": "注册中心",
     "Related issue type": "关联事项类型",
     "Release document": "发布文档",
+    "Release relationship": "解除关系",
     "Release version": "发布版本",
     "Remark": "备注",
     "Rename": "重命名",
@@ -1192,6 +1195,7 @@
     "Search for the test plan I am involved in/responsible for.": "搜索我参与/负责的测试计划",
     "Select App Artifact": "选择应用创建",
     "Select the status": "选择状态",
+    "Serious": "严重",
     "Set as default": "设为默认",
     "Set notification groups for notifications": "组织好通知群组以便设置通知",
     "Set the default merge request description template": "设置默认的合并请求描述模板",
@@ -1275,6 +1279,7 @@
     "Type-issue": "事项类型",
     "Unfinished iteration": "未完成迭代",
     "Unfollow": "取消关注",
+    "Unspecified": "未指定",
     "Up to 255 characters for directory name": "目录名最大长度255",
     "Up to 255 characters for url path": "url 路径最多255个字符",
     "Update Priority": "更新优先级",
@@ -1283,6 +1288,7 @@
     "Updated the working hours": "更新了工时",
     "Upload File": "选择文件创建",
     "Upload ZIP file": "上传zip文件",
+    "Urgent": "紧急",
     "Usage": "使用",
     "Use case list": "用例列表",
     "Use case statistics": "用例统计",
@@ -1423,7 +1429,6 @@
     "collapse file": "收起文件",
     "command": "命令",
     "commented at": "评论于",
-    "comments": "评论",
     "commit ID": "提交ID",
     "commit branch": "提交分支",
     "commit message": "提交信息",
@@ -1783,7 +1788,6 @@
     "relation added successfully": "添加关联成功",
     "release associated label will be deleted, confirm to delete?": "将会删除制品中关联的标签，确认删除？",
     "release name": "制品名称",
-    "release relationship": "解除关系",
     "reopen": "重新打开",
     "repeat number of lines": "重复行数",
     "reply": "回复",
@@ -1802,7 +1806,6 @@
     "reset and switch": "重置并切换",
     "resolved": "已解决",
     "resources": "资源",
-    "responsible person": "责任人",
     "restart deploy": "重新部署",
     "restored successfully": "还原成功",
     "results of the": "执行结果",
@@ -1828,7 +1831,6 @@
     "select instance": "选择实例",
     "select iteration": "选择迭代",
     "self-test situation": "自测情况",
-    "serious": "严重",
     "service architecture": "服务架构",
     "service deployment": "服务部署",
     "service instance name is repeated": "服务实例名称重复",
@@ -1938,7 +1940,6 @@
     "unarchive": "取消归档",
     "unlimited": "不限",
     "unpinned successfully": "取消置顶成功",
-    "unspecified": "未指定",
     "update completed": "更新成功",
     "update-dice-yml-env": "是否需要更新dice.yml, 比如新增（修改）环境变量等",
     "updated": "更新日期",
@@ -1947,7 +1948,6 @@
     "upload files": "上传文件",
     "upload-file-tip": "文件位于容器内 /.pipeline/container/cms/dice_files目录下, 文件名为配置时的 key 值, 文件内容即为上传的文件",
     "uploading, please do not leave": "上传中，请勿离开",
-    "urgent": "紧急",
     "use case title (required)": "用例标题(必填)",
     "variable-config": "配置你的构建，用于管理特定环境的构建变量",
     "version details": "版本详情",
@@ -1972,8 +1972,8 @@
     "yml-addon-not-exist-tip": "当前实例不存在，请切换到编辑模式重新添加",
     "your browser does not support WebSocket!": "您的浏览器不支持 WebSocket!",
     "{app}: {branch}, gets new pipelines {time}": "{app}: {branch}, 于 {time}发现了新流水线文件",
-    "{num} members are following": "{num} 位成员正在关注",
-    "{num} people followed": "{num} 人关注"
+    "{num} followers": "{num} 人关注",
+    "{num} members are following": "{num} 位成员正在关注"
   },
   "ecp": {
     "Configuration": "配置集管理",
