feat: add dice yml job edit

--- a/shell/app/locales/en.json
+++ b/shell/app/locales/en.json
@@ -1596,6 +1596,7 @@
     "issues associated label will be deleted, confirm to delete?": "issues associated label will be deleted, confirm to delete?",
     "iteration": "iteration",
     "iteration goal": "iteration goal",
+    "Job": "Job",
     "jump to code": "jump to code",
     "just add new features": "just add new features",
     "jvm process info": "jvm process info",
