--- a/shell/app/locales/zh.json
+++ b/shell/app/locales/zh.json
@@ -1579,6 +1579,7 @@
     "issues associated label will be deleted, confirm to delete?": "将会删除事项中关联的标签，确认删除？",
     "iteration": "迭代",
     "iteration goal": "迭代目标",
+    "Job": "任务",
     "jump to code": "跳转到代码",
     "just add new features": "只是增加新功能",
     "jvm process info": "进程信息",
